force-app/main/default/objects/Form_Response__c/Form_Response__c.object-meta.xml
<CustomObject>
    <label>Form Response</label>
    <pluralLabel>Form Responses</pluralLabel>
        <sharingModel>ControlledByParent</sharingModel>

<nameField>
    <label>Response Name</label>
    <type>Text</type>
</nameField>
</CustomObject>