force-app/main/default/objects/Form_Response__c/fields/Answer_Blob__c.field-meta.xml
<CustomField>
    <fullName>Answer_Blob__c</fullName>
    <label>Answer Blob (JSON)</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>