force-app/main/default/objects/Form_Response__c/fields/Completion_Percent__c.field-meta.xml
<CustomField>
    <fullName>Completion_Percent__c</fullName>
    <label>Completion Percent</label>
    <type>Percent</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>