force-app/main/default/objects/Form_Response__c/fields/Form_Assignment__c.field-meta.xml
    <CustomField>
        <fullName>Form_Assignment__c</fullName>
        <label>Form Assignment</label>
        <type>MasterDetail</type>
        <referenceTo>Form_Assignment__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
<relationshipOrder>0</relationshipOrder>
    </CustomField>