force-app/main/default/objects/Form_Response__c/fields/Last_Saved_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Saved_At__c</fullName>
    <label>Last Saved At</label>
    <type>DateTime</type>
</CustomField>