force-app/main/default/objects/Form_Response__c/fields/Lock_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lock_Reason__c</fullName>
    <label>Lock Reason</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>