force-app/main/default/objects/Form_Response__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <label>Submitted By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Submitted Responses</relationshipLabel>
    <relationshipName>SubmittedResponses</relationshipName>
</CustomField>